--- a/package.json
+++ b/package.json
@@ -53,13 +53,17 @@
     "react": ">=16.0.0",
     "react-chartjs-2": "2.11.1",
     "react-copy-to-clipboard": "5.1.0",
+    "react-csv": "^2.2.2",
     "react-datetime": "3.1.1",
     "react-dom": ">=16.0.0",
+    "react-html-table-to-excel": "^2.0.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "reactstrap": "8.9.0",
     "sass": "1.54.5",
-    "scrollax": "^1.0.0"
+    "scrollax": "^1.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "gulp": "4.0.2",
